--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,6 @@ img{
 .sec1_footer{
     width: 100%;
     height: 10vh;
-    border-top: 2px solid #fff;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -89,57 +88,82 @@ img{
     align-items: center;
 }
 .sec1_footer_help{
+    padding: 10px;
+    padding-right: 0;
+    padding-bottom: 20px;
     width: 100%;
     height: 100%;
-    border-right: #fff 2px solid;
-    text-align: center;
-
+    text-align: right;
+   background-color: rgba(44, 3, 82, 0.205);
+   border-radius: 10px;
+   box-shadow:6px 6px 6px rgba(20%,20%,40%,0.5),inset 1px 1px 4px 2px rgba(20%,20%,40%,0.5);
+   /* line-height: 92px; */
+}
+.sec1_footer_help:hover{
+   background-color: rgba(85, 42, 128, 0.411);
 }
 .sec1_footer_help a{
     /* margin: auto; */
     margin: 0;
+    font-family: 'Microsoft Jhenghei';
+    font-size: 20px;
+    /* vertical-align:  -25px; */
     height: 100%;
     width: 100%;
    padding: 20%;
-   background-color: #999;
    position: relative;
    display: inline-block;
     overflow: hidden;
 }
 
 .sec1_footer_help a img{
-    display: block;
+  display: inline-block;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  min-height: 100%;
-  min-width: 100%;
+  top: 45%;
+  left: 25%;
+  width: 80%;
+  height: 80%;
   transform: translate(-50%, -50%);
+  /* margin-left: 5px; */
+  /* -webkit-box-reflect: below 1px -webkit-gradient(linear, 0% 100%,100% 100%, from(rgba(255,255,255,0)), to(white)); */
+    /* box-reflect: below 1px -webkit-gradient(linear, 0% 100%,100% 100%, from(rgba(255,255,255,0)), to(white)); */
+
 }
 .sec1_footer_record{
+    padding: 10px;
+    padding-right: 0;
+    padding-bottom: 20px;
     width: 100%;
     height: 100%;
-    text-align: center;
-
-
+    text-align: right;
+    background-color: rgba(44, 3, 82, 0.205);
+    box-shadow:6px 6px 6px rgba(20%,20%,40%,0.5),inset 1px 1px 4px 2px rgba(20%,20%,40%,0.5);
+    border-radius: 10px;
+}
+.sec1_footer_record:hover{
+    background-color: rgba(85, 42, 128, 0.411);
 }
 .sec1_footer_record a{
+    font-family: 'Microsoft Jhenghei';
+    font-size: 20px;
     width: 100%;
     height: 100%;
     padding: 20%;
-    background-color: #999;
+    /* background-color: #999; */
+   position: relative;
     display: inline-block;
     overflow: hidden;
 }
-/* .sec1_footer_record a img{
-    display: block;
+.sec1_footer_record a img{
+    display: inline-block;
     position: absolute;
     top: 50%;
-    left: 50%;
-    min-height: 100%;
-    min-width: 100%;
+    left: 25%;
+    width: 85%;
+    height: 85%;
     transform: translate(-50%, -50%);
-} */
+    /* margin-left: 5px; */
+}
 .sec2{
     flex:1 1;
     order:2;
@@ -232,13 +256,29 @@ img{
     position: absolute;
     top: 0;
     right: 0;
+    width: 120px;
+    height: 80px;
     background-color: brown;
     text-align: center;
     padding: 20px 30px;
     font-size: 20px;
     transition: all .3s;
     z-index: 2;
+    border-radius: 50% 50% 50% 9%/50% 0% 17% 9%; 
+    -webkit-border-radius: 50% 50% 50% 9%/50% 0% 17% 9%; 
+    -moz-border-radius: 50% 50% 50% 9%/50% 0% 17% 9%;
 }
+
+.sec2_back img{
+    position: relative;
+    top: -5px;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+  
+
+}
+
 .sec2_back:hover{
-    background-color: rgb(230, 164, 65);
+    background-color:transparent;
 }
